Adding SSL security + updating release scripts and using Java 11